--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "multer": "^1.2.1",
     "pg": "^4.1.1",
     "promises": "^0.2.5",
+    "sendgrid": "^5.1.0",
     "sequelize": "^1.7.11",
     "serve-favicon": "^2.1.7"
   }
