Se modifica la cadena de conexión a la base de datos para utilizar el MySQL del hosting de registrosdemantenimiento.com. Se añade la dependencia a MySQL. Se cambia el puerto interno porque se usa internamente en otro servicio. Se cambia del 8443 al 18443.

--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "sendgrid": "^5.1.0",
     "sequelize": "^1.7.11",
     "serve-favicon": "^2.1.7",
-    "squel": "^5.11.1"
+    "squel": "^5.11.1",
+    "mysql": ">=2.5.0"
   }
 }
