--- a/package.json
+++ b/package.json
@@ -22,15 +22,14 @@
     "express-partials": "^0.3.0",
     "express-session": "^1.15.1",
     "fs-extra": "^0.24.0",
+    "mail": "^0.2.3",
     "method-override": "^2.3.7",
     "morgan": "^1.3.2",
     "multer": "^1.2.1",
+    "mysql": ">=2.5.0",
     "pg": "^4.1.1",
     "promises": "^0.2.5",
-    "sendgrid": "^5.1.0",
     "sequelize": "^1.7.11",
-    "serve-favicon": "^2.1.7",
-    "squel": "^5.11.1",
-    "mysql": ">=2.5.0"
+    "serve-favicon": "^2.1.7"
   }
 }
