--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "morgan": "^1.3.2",
     "multer": "^1.2.1",
     "mysql": ">=2.5.0",
+    "nodemailer": "^4.0.1",
     "pg": "^4.1.1",
     "promises": "^0.2.5",
     "sequelize": "^1.7.11",
