--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
     "pg": "^4.1.1",
     "promises": "^0.2.5",
     "sequelize": "^1.7.11",
-    "serve-favicon": "^2.1.7"
+    "serve-favicon": "^2.1.7",
+    "exceljs": "0.5.1",
+    "tempfile": "2.0.0"
   }
 }
