--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
   "dependencies": {
     "async": "^2.1.4",
     "body-parser": "^1.8.4",
+    "chart.js": "^2.7.0",
     "connect-busboy": "0.0.2",
     "cookie-parser": "^1.3.5",
     "debug": "^2.0.0",
     "ejs": "^0.8.8",
+    "exceljs": "0.5.1",
     "express": "^4.9.8",
     "express-partials": "^0.3.0",
     "express-session": "^1.15.1",
@@ -32,7 +34,6 @@
     "promises": "^0.2.5",
     "sequelize": "^1.7.11",
     "serve-favicon": "^2.1.7",
-    "exceljs": "0.5.1",
     "tempfile": "2.0.0"
   }
 }
